Rework SyntaxInfo/Builder system